--- a/LinkSharedBlazor/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/LinkSharedBlazor/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,4 +1,5 @@
-﻿@inject SignInManager<IdentityUser> SignInManager
+﻿@inject SignInManager<LinkSharedUser> SignInManager
+@using LinkSharedBlazor.Areas.Identity.Data
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
