--- a/LinkSharedBlazor/Areas/Identity/Pages/Account/Logout.cshtml
+++ b/LinkSharedBlazor/Areas/Identity/Pages/Account/Logout.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Log out";
 }
 
-<header>
+@*<header>
     <h1>@ViewData["Title"]</h1>
     @{
         if (User.Identity.IsAuthenticated)
@@ -18,4 +18,5 @@
             <p>You have successfully logged out of the application.</p>
         }
     }
-</header>
+</header>*@
+<h1 class="text-center text-red-500">Logging Out</h1>
