--- a/LinkSharedBlazor/Areas/Identity/Pages/Account/Register.cshtml
+++ b/LinkSharedBlazor/Areas/Identity/Pages/Account/Register.cshtml
@@ -13,6 +13,11 @@
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="Input.UserName"></label>
+                <input asp-for="Input.UserName" class="form-control" />
+                <span asp-validation-for="Input.UserName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Input.Email"></label>
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
@@ -27,7 +32,20 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Register</button>
+            <div class="form-group">
+                <label asp-for="Input.Role"></label>
+                <select asp-for="Input.Role" class="form-control">
+                    <option value="" selected disabled>
+                        -- Phân quyền --
+                    </option>
+                    @foreach (var item in Model.Roles)
+                    {
+                        <option value="@item.Name">@item.Name</option>
+                    }
+                </select>
+                <span asp-validation-for="Input.Role" class="text-danger"></span>
+                <button type="submit" class="btn btn-primary">Register</button>
+            </div>
         </form>
     </div>
     <div class="col-md-6 col-md-offset-2">
