--- a/LinkSharedBlazor/Pages/Shared/_LoginPartial.cshtml
+++ b/LinkSharedBlazor/Pages/Shared/_LoginPartial.cshtml
@@ -1,7 +1,8 @@
 ﻿@using Microsoft.AspNetCore.Identity
+@using LinkSharedBlazor.Areas.Identity.Data
 
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@inject SignInManager<LinkSharedUser> SignInManager
+@inject UserManager<LinkSharedUser> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
@@ -13,6 +14,7 @@
         <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })">
             <button id="logout" type="submit" class="nav-link btn btn-link text-dark">Logout</button>
         </form>
+        @*<a class="form-inline" href="Identity/Account/Logout">Logout</a>*@
     </li>
 }
 else
