--- a/LinkSharedBlazor/Shared/LoginDisplay.razor
+++ b/LinkSharedBlazor/Shared/LoginDisplay.razor
@@ -1,8 +1,9 @@
-﻿<AuthorizeView>
+﻿
+<AuthorizeView>
     <Authorized>
         <a href="Identity/Account/Manage">Hello, @context.User.Identity.Name!</a>
-        <form method="post" action="Identity/Account/LogOut">
-            <button type="submit" class="nav-link btn btn-link">Log out</button>
+        <form method="get" action="Identity/Account/LogOut">
+            <button type="submit" class="nav-link btn btn-link">Đăng xuất</button>
         </form>
     </Authorized>
     <NotAuthorized>
