--- a/LinkSharedBlazor/Shared/NavMenu.razor
+++ b/LinkSharedBlazor/Shared/NavMenu.razor
@@ -1,4 +1,5 @@
-﻿<div class="top-row pl-4 navbar navbar-dark">
+﻿@inject UserServices UserServices
+<div class="top-row pl-4 navbar navbar-dark">
     <a class="navbar-brand" href="">LinkSharedBlazor</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
@@ -32,16 +33,17 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Social
             </NavLink>
         </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="link">
+        @*<li class="nav-item px-3">
+            <NavLink class="nav-link" href="@("info/" + Cascadeduser.Id)">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Link
             </NavLink>
-        </li>
+        </li>*@
     </ul>
 </div>
 
 @code {
     private bool collapseNavMenu = true;
+    [CascadingParameter] private User Cascadeduser { get; set; }
 
     private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
 
