--- a/LinkSharedBlazor/Shared/NavMenu.razor
+++ b/LinkSharedBlazor/Shared/NavMenu.razor
@@ -1,4 +1,5 @@
 ﻿@inject UserServices UserServices
+
 <div class="top-row pl-4 navbar navbar-dark">
     <a class="navbar-brand" href="">LinkSharedBlazor</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
@@ -13,31 +14,35 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="users">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Users
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="social">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Social
-            </NavLink>
-        </li>
-        @*<li class="nav-item px-3">
-            <NavLink class="nav-link" href="@("info/" + Cascadeduser.Id)">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Link
-            </NavLink>
-        </li>*@
+        <AuthorizeView Roles="Admin">
+            <Authorized>
+
+
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="users">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> Users
+                    </NavLink>
+                </li>
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="social">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> Social
+                    </NavLink>
+                </li>
+            </Authorized>
+
+        </AuthorizeView>
+        @if (Cascadeduser != null)
+        {
+            <AuthorizeView>
+                <Authorized>
+                    <li class="nav-item px-3">
+                        <NavLink class="nav-link" href="@("info/" + Cascadeduser.Id.ToString())">
+                            <span class="oi oi-list-rich" aria-hidden="true"></span> Thông tin tài khoản
+                        </NavLink>
+                    </li>
+                </Authorized>
+            </AuthorizeView>
+}
     </ul>
 </div>
 
@@ -50,5 +55,20 @@
     private void ToggleNavMenu()
     {
         collapseNavMenu = !collapseNavMenu;
+    }
+    protected override void OnInitialized()
+    {
+
+        //if (works != null)
+        //{
+        //    if (works.Length > 1)
+        //    {
+        //        _userName = works[works.Length - 2] + " " + works[works.Length - 1];
+        //    }
+        //    else
+        //    {
+        //        _userName = works[works.Length - 1];
+        //    }
+        //}
     }
 }
