--- a/LinkSharedBlazor/Pages/Shared/_Layout.cshtml
+++ b/LinkSharedBlazor/Pages/Shared/_Layout.cshtml
@@ -38,12 +38,13 @@
             </div>
         </nav>
     </header>
-
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
+    <section style="background-image: linear-gradient(to right, rgba(255,106,106,0.4), rgba(230,230,250,1));">
+        <div class="container" ">
+            <main role="main" class="pb-3">
+                @RenderBody()
+            </main>
+        </div>
+    </section>
     <footer class="footer border-top text-muted">
         <div class="container">
             &copy; 2021 - LinkSharedBlazor - <a asp-area="" asp-page="Privacy">Privacy</a>
