--- a/LinkSharedBlazor/Components/ListLink.razor
+++ b/LinkSharedBlazor/Components/ListLink.razor
@@ -3,7 +3,9 @@
 @layout EmptyLayout
 @inject SocialServices SocialServices
 @inject NavigationManager NavigationManager
+
 <AuthorizeView>
+   
     <NotAuthorized>
         <div class="container-fluid" style="background-image: url('~/background.png'); ">
             <br />
@@ -13,7 +15,7 @@
             <div class="container">
                 <a href="@item.SocialLink" target="_blank">
                     <div class="card bg-primary text-white">
-                        <div class="card-body font-weight-bold text-center">@item.SocialNavigation.SocialName <p></p></div>
+                        <div class="card-body font-weight-bold text-center" style="text-decoration:none;"> @item.SocialNavigation.SocialName <p></p></div>
                     </div>
                 </a>
                 <br>
@@ -22,21 +24,34 @@
         </div>
     </NotAuthorized>
     <Authorized>
-        <div class="container-fluid" style="background-image: url('~/background.png'); ">
+        
+        <div class="container-fluid " style="background-image: linear-gradient(to right, rgba(255,106,106,0.4), rgba(230,230,250,1)); ">
             <br />
             <br />
-            @foreach (var item in Links)
-            {
-            <div class="container">
-                <a href="@item.SocialLink" target="_blank">
-                    <div class="card bg-primary text-white">
-                        <div class="card-body font-weight-bold text-center">@item.SocialNavigation.SocialName <p></p></div>
+            <div class="container ">
+                <div class="text-center ">
+                    <div class="rounded-circle " style=" width:130px; height:130px; border:1.5px solid red; margin-left:auto; margin-right:auto;">
+                        //Nếu có hình thì không cần div này  chỉ cần thêm class="center-block" vào trong thẻ img
+                        <img src="~/background.png" alt="..." class="rounded-circle ">
                     </div>
-                </a>
-                <br>
+
+                    <h1>Tên hiển thị</h1>
+                </div>
+
+                @foreach (var item in Links)
+                {
+
+                    <a href="@item.SocialLink" style="text-decoration:none;" target="_blank">
+                        <div style="background-image: linear-gradient(to right,rgba(255,48,48,0.8), rgba(255, 165,0,0.3));  border: 2px solid white" class="card  text-white  btn-outline-warning ">
+
+                            <div class="card-body font-weight-bold text-center "><img src="~/Icon/facebook_messenger_fb_logo_icon_134005.png" alt="iconfb" /> @item.SocialNavigation.SocialName </div>
+                        </div>
+                    </a>
+                    <br>
+
+                }
             </div>
-            }
-        </div>
+            </div>
     </Authorized>
 </AuthorizeView>
 
