--- a/LinkSharedBlazor/Pages/_Host.cshtml
+++ b/LinkSharedBlazor/Pages/_Host.cshtml
@@ -12,11 +12,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LinkSharedBlazor</title>
     <base href="~/" />
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link href="css/site.css" rel="stylesheet" />
     <link href="LinkSharedBlazor.styles.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+    <link href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" rel="stylesheet">
 </head>
 <body>
     <component type="typeof(App)" render-mode="ServerPrerendered" />
