--- a/LinkSharedBlazor/Components/Information.razor
+++ b/LinkSharedBlazor/Components/Information.razor
@@ -20,7 +20,7 @@
     <MudButton Size="Size.Small" Variant="Variant.Filled" OnClick="HandleAddLink" Color="Color.Primary">Thêm</MudButton>
 </div>
 <br />
-<MudTable Items="@Links" Hover="true" Breakpoint="Breakpoint.Sm" Loading="@_loading" LoadingProgressColor="Color.Info">
+<MudTable Items="@Links" Hover="true" Breakpoint="Breakpoint.Sm">
     <HeaderContent>
         <MudTh>Mạng xã hội</MudTh>
         <MudTh>Link</MudTh>
@@ -54,8 +54,7 @@
     Link _link = new();
     int _socialId;
     bool _isEdit;
-    User User = new User();
-    public bool _loading;
+    User User = new User(); 
 
     async Task HandleAddLink()
     {
@@ -76,10 +75,6 @@
             {
                 Socials.Remove(social);
             }
-        }
-        if (Links != null)
-        {
-            _loading = true;
-        }
+        } 
     }
 }
