--- a/LinkSharedBlazor/Shared/NavMenu.razor
+++ b/LinkSharedBlazor/Shared/NavMenu.razor
@@ -42,7 +42,16 @@
                     </li>
                 </Authorized>
             </AuthorizeView>
-}
+        }
+        <AuthorizeView Roles="Admin">
+            <Authorized Context="admin">
+                <li class="nav-item px-3">
+                    <NavLink class="nav-link" href="Identity/Account/Register">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> Đăng ký tài khoản
+                    </NavLink>
+                </li> 
+            </Authorized>
+        </AuthorizeView>
     </ul>
 </div>
 
